--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">TestMyApp</string>
+    <string name="app_name">TestMyAppPackage</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Hello world!The Project is a test project.</string>
     <string name="action_settings">Settings</string>
 </resources>
