--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">TestMyAppPackage</string>
 
-    <string name="hello_world">Hello!This is my test project.</string>
+    <string name="hello_world">Hello!Testing app package..</string>
     <string name="action_settings">Settings</string>
 </resources>
